Bug 1766045 - Vendoring in Rust code for uniffi-bindgen-gecko-js
- Added `--enable-uniffi-fixtures` flag.  When set, we will compile in
  the UniFFI test fixtures into our shared Rust crate and eventually
  into `libxul`.
- Vendoring in the Rust crates needed for `uniffi-bindgen-gecko-js`
- Updated `vendor_rust.py` now that there are new duplicate Rust crates.
  Since `uniffi-bindgen-gecko-js` is only used as a build-time tool, I
  don't think this will result in wasted space in libxul, but it would
  be good to reduce in any case.  Here's what I can figure out about the
  deps:
  - paste: Gecko is on an older version (0.1 vs 1.0).  The version comes
    from the rkv dependecy.
  - semver: Gecko is on an older version (0.9 vs 0.11). The version
    comes from the packed_simd dependency, which depends on
    rustc_version 0.2.3, which depends on semver 0.9
  - semver-parser: Extra fallout from the semver issue
  - toml: Gecko is on an older version (0.4 vs 0.4).  The version comes
    from the neqo-crypto dependency.
  - nom: Gecko is on an older version (5.x vs 7.x).  There are several
    dependencies at play here.

Differential Revision: https://phabricator.services.mozilla.com/D144467

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -171,3 +171,17 @@ webext-storage = { git = "https://github.com/mozilla/application-services", rev 
 # There is not going to be new version of mio 0.6, mio now being >= 0.7.11.
 [patch.crates-io.mio]
 path = "third_party/rust/mio-0.6.23"
+
+# Patch the UniFFI fixture crates to use the published version of UniFFI.
+#
+# These are used to test UniFFI functionality.  We haven't figured out how we
+# want to publish these yet, so they are only accessible via git.  This works
+# okay, but it means that their dependencies on UniFFI crates will normally
+# also be the git versions.  Patch them to use the published versions to avoid
+# duplicate crates.
+[patch."https://github.com/mozilla/uniffi-rs.git"]
+uniffi = "0.18"
+uniffi_bindgen = "0.18"
+uniffi_build = "0.18"
+uniffi_macros = "0.18"
+weedle2 = "2.0.1"
