--- a/toolkit/components/uniffi-bindgen-gecko-js/Cargo.toml
+++ b/toolkit/components/uniffi-bindgen-gecko-js/Cargo.toml
@@ -13,6 +13,6 @@ askama = { version = "0.11", default-features = false, features = ["config"] }
 clap = { version = "3.1", features = ["std", "derive"] }
 extend = "1.1"
 heck = "0.4"
-uniffi_bindgen = { git = "https://github.com/mozilla/uniffi-rs.git", branch="main" }
+uniffi_bindgen = "0.18"
 serde = "1"
 toml = "0.5"
