Bug 1766045 - Adding mach command to generate UniFFI files
Added `mach uniffi generate` which uses `uniffi-bindgen-gecko-js` to
generate JS bindings. It's unfortunate that we need to check these files
in, but I couldn't figure out a way to auto-generate them as part of the
build process.

Adding `#include "nsIContent.h"` to dom/base/nsINodeList.h.  I think
that should have been present before, but things built okay because of
the way things got combined in the uniffied .cpp files. Adding these new
webIDL files bumped `NodeListBinding.cpp` to a new uniffied .cpp file
which caused the build to fail.

Differential Revision: https://phabricator.services.mozilla.com/D144468

--- a/.clang-format-ignore
+++ b/.clang-format-ignore
@@ -65,6 +65,8 @@ xpcom/reflect/xptcall/md/unix/.*
 
 # Askama template code, which isn't valid C++ in its original form
 toolkit/components/uniffi-bindgen-gecko-js/src/templates/.*
+# Generated from that template code
+toolkit/components/uniffi-bindgen-gecko-js/fixtures/generated/.*
 
 # Generated from ./tools/rewriting/ThirdPartyPaths.txt
 # awk '{print ""$1".*"}' ./tools/rewriting/ThirdPartyPaths.txt
