--- a/.clang-format-ignore
+++ b/.clang-format-ignore
@@ -66,7 +66,8 @@ xpcom/reflect/xptcall/md/unix/.*
 # Askama template code, which isn't valid C++ in its original form
 toolkit/components/uniffi-bindgen-gecko-js/src/templates/.*
 # Generated from that template code
-toolkit/components/uniffi-bindgen-gecko-js/fixtures/generated/.*
+toolkit/components/uniffi-js/UniFFIScaffolding.cpp
+toolkit/components/uniffi-js/UniFFIFixtureScaffolding.cpp
 
 # Generated from ./tools/rewriting/ThirdPartyPaths.txt
 # awk '{print ""$1".*"}' ./tools/rewriting/ThirdPartyPaths.txt
